Small sizing and alignment fixes (#8171)
CHANGELOG_BEGIN
CHANGELOG_END

--- a/docs/theme/sass/_theme_landing_page.sass
+++ b/docs/theme/sass/_theme_landing_page.sass
@@ -1,4 +1,3 @@
-
 .boxes
   display: flex
   flex-wrap: wrap
@@ -63,7 +62,7 @@
     .box .da-btn-label
       position: absolute
       font-size: 16px
-      right: 20px
+      right: 30px
       top: 15px
 
 .boxes .box1
